# OpenWind-AU

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source.yml  feature_request.yml  validation_example.yml
.github/workflows/: ci.yml
data/validation/: anonymized_reference_osm_footprints.json  reference_calc_7989_osm_footprints.json
docs/: api.md  calculation-basis.md  consumer-readiness.md  installation.md  limitations.md  mcp.md  release.md  reports.md  reviewer-checklist.md  running-locally.md  screenshots.md  validation.md  vegetation-obstruction-sources.md  wind-region-diagnostics.md  workflow.md
docs/releases/: v0.6.0.md
docs/screenshots/: site-analysis.placeholder.md  terrain-profiles.placeholder.md  topographic-screening.placeholder.md  validation-report.placeholder.md
examples/: sample_analysis.json  sample_report.html  sample_request.json  sample_validation_report.html  workflow.md
examples/demo-project/: README.md  reviewed_obstructions.csv  sample_footprints.json  site_request.json
src/openwind/calc/: terrain_category.py
src/openwind/data/: landcover.py
src/openwind_au/: __init__.py  analysis.py  anonymized_reference_validation.py  api.py  calculation_validation.py  dem.py  elevation_enrichment.py  errors.py  geo.py  height_estimation.py  http_client.py  http_security.py  main.py  mcp_server.py  microsoft_footprints.py  models.py  mzcat.py  obstructions.py  reference_calc_validation.py  report_lineage.py  reports.py  result_integrity.py  shielding.py  standard_calculations.py  standard_lookup_tables.py  terrain.py  terrain_category.py  terrain_category_validation.py  topographic_multiplier.py  topography.py  validation.py  wind_inputs.py  wind_region.py  wind_workflow.py
src/openwind_au/data/: __init__.py  direction_multipliers.json  landcover.py  regional_wind_speeds.json  shielding_multipliers.json  terrain_height_multipliers.json
src/openwind_au/static/: app.js  index.html  styles.css  validation.html  validation.js  wind_workflow.html  wind_workflow.js
tests/: __init__.py  test_analysis.py  test_anonymized_reference_validation.py  test_api.py  test_calculation_validation.py  test_dem.py  test_docs.py  test_elevation_enrichment.py  test_geo.py  test_height_estimation.py  test_main.py  test_mcp_server.py  test_microsoft_footprints.py  test_models.py  test_mzcat.py  test_obstructions.py  test_production_hardening.py  test_reference_calc_validation.py  test_release_metadata.py  test_reports.py  test_shielding.py  test_standard_calculations.py  test_standard_lookup_tables.py  test_terrain.py  test_terrain_category.py  test_topographic_multiplier.py  test_topography.py  test_validation.py  test_wind_inputs.py  test_wind_workflow.py
tests/fixtures/: wind_regions_sample.geojson
tests/js/: app_import.test.cjs  app_payload.test.cjs  app_state.test.cjs  wind_workflow_state.test.cjs
