[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwind-au"
version = "0.8.0"
description = "Preliminary wind site terrain and topographic analysis for Australian buildings using public geospatial datasets."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
  { name = "Elandu" }
]
keywords = [
  "wind-engineering",
  "australia",
  "terrain-analysis",
  "topography",
  "fastapi",
  "gis",
  "as-nzs-1170-2",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.11,<3",
  "typing-extensions>=4.12; python_version < '3.13'",
  "numpy>=1.26",
  "scipy>=1.11",
  "requests>=2.31",
  "jinja2>=3.1",
  "plotly>=5.22",
  "folium>=0.17",
  "reportlab>=4.2",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "shapely>=2.0",
  "pyproj>=3.6",
  "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "httpx>=0.27.1,<0.29",
  "httpx2>=2,<3",
]

[project.scripts]
openwind-au = "openwind_au.main:main"
openwind-au-mcp = "openwind_au.mcp_server:main"

[project.urls]
Repository = "https://github.com/Elandu/OpenWind-AU"
Issues = "https://github.com/Elandu/OpenWind-AU/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openwind_au"]

[tool.hatch.build.targets.wheel.force-include]
"data/validation/anonymized_reference_osm_footprints.json" = "openwind_au/data/anonymized_reference_osm_footprints.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
required-version = ">=0.11.26,<0.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
filterwarnings = [
  "error::starlette.exceptions.StarletteDeprecationWarning",
]
